--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
           <input name="credentials[password_confirmation]" type="password" value="an example password">
           <input type="submit" name="submit" value="Sign up">
         </form>
+<!--Sign in -->
+        <form id="sign-in">
+          <fieldset>
+              <legend>Sign in</legend>
+                <input type="text" name="credentials[email]" value="" placeholder="email">
+                <input type="password" name="credentials[password]" value="" placeholder="password">
+                <input type="submit" name="submit" value="Sign in!">
+              </fieldset>
+        </form>
       </div>
       <div class="container">
         <table id="game-board">
