allows sign out

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <input type="submit" name="submit" value="Sign in!">
               </fieldset>
         </form>
+        <input type="submit" id="sign-out" name="submit" value="Sign out">
       </div>
       <div class="container">
         <table id="game-board">
