--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
       <div class="container">
         <table id="game-board">
           <tr>
-            <td  id='square0'><button type="submit" value=""></button></td>
-            <td id='square1'>O</td>
-            <td id='2'></td>
+            <td  id='square0'></td>
+            <td id='square1'></td>
+            <td id='square2'></td>
           </tr>
           <tr>
-            <td id='3'></td>
-            <td id='4'></td>
-            <td id='5'></td>
+            <td id='square3'></td>
+            <td id='square4'></td>
+            <td id='square5'></td>
           </tr>
           <tr>
-            <td id='6'></td>
-            <td id='7'></td>
-            <td id='8'></td>
+            <td id='square6'></td>
+            <td id='square7'></td>
+            <td id='square8'></td>
           </tr>
         </table>
       </div>
