cleans out excess comments+ adjusts form aesthetic

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body class="container-fluid">
       <div class="nav">
         <form id="sign-up">
-          <input name="credentials[email]" type="text" value="an@example.email">
-          <input name="credentials[password]" type="password" value="an example password">
-          <input name="credentials[password_confirmation]" type="password" value="an example password">
+          <input name="credentials[email]" type="text" placeholder="an@example.email">
+          <input name="credentials[password]" type="password" placeholder="an example password">
+          <input name="credentials[password_confirmation]" type="password" placeholder="an example password">
           <input type="submit" name="submit" value="Sign up">
         </form>
 <!--Sign in -->
