allows for creation of new game
uses TOKEN

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
           <input name="credentials[password_confirmation]" type="password" placeholder="an example password">
           <input type="submit" name="submit" value="Sign up">
         </form>
+<!-- Game forms! -->
+        <form id="new-game">
+          <input type="submit" name="submit" value="New Game">
+        </form>
+
 <!--Sign in -->
         <form id="sign-in">
               <legend>Sign in</legend>
