--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
                 <input type="password" name="credentials[password]" value="" placeholder="password">
                 <input type="submit" name="submit" value="Sign in!">
         </form>
+        <form id="sign-in-two">
+              <legend>Sign in player 2</legend>
+                <input type="text" name="credentials[email]" value="" placeholder="email">
+                <input type="password" name="credentials[password]" value="" placeholder="password">
+                <input type="submit" name="submit" value="Sign in!">
+        </form>
+
+
+
         <input type="submit" id="sign-out" name="submit" value="Sign out">
       </div>
       <div class="container">
