--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <input type="password" name="credentials[password]" value="" placeholder="password">
                 <input type="submit" name="submit" value="Sign in!">
         </form>
-        <form id="sign-in-two">
+        <form id="sign-in-two" class="">
               <legend>Sign in player 2</legend>
                 <input type="text" name="credentials[email]" value="" placeholder="email">
                 <input type="password" name="credentials[password]" value="" placeholder="password">
