--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
                 <input type="password" name="credentials[password]" value="" placeholder="password">
                 <input type="submit" name="submit" value="Sign in!">
         </form>
-        <form id="sign-in-two" class="">
-              <legend>Sign in player 2</legend>
-                <input type="text" name="credentials[email]" value="" placeholder="email">
-                <input type="password" name="credentials[password]" value="" placeholder="password">
-                <input type="submit" name="submit" value="Sign in!">
+
+        <form id="change-password">
+          <input type="text" name="passwords[old]" value "" placeholder="change password">
+          <input type="text" name="passwords[new]" value "" placeholder="change password">
+          <input type="submit" name="submit" value="Submit new password">
         </form>
+
+
 
 
 
@@ -56,5 +58,12 @@
           </tr>
         </table>
       </div>
+
+      <form id="sign-in-two" class="">
+            <legend>Sign in player 2</legend>
+              <input type="text" name="credentials[email]" value="" placeholder="email">
+              <input type="password" name="credentials[password]" value="" placeholder="password">
+              <input type="submit" name="submit" value="Sign in!">
+      </form>
     </body>
 </html>
