logs player two into game object
big milestone

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
           <input type="submit" name="submit" value="New Game">
         </form>
 
+        <form id="join-game">
+          <input type="submit" name="submit" value="Join">
+        </form>
+
 <!--Sign in -->
         <form id="sign-in">
               <legend>Sign in</legend>
