--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </table>
       </div>
 
-      <form id="sign-in-two" class="">
+      <form id="sign-in-two" class="hidden">
             <legend>Sign in player 2</legend>
               <input type="text" name="credentials[email]" value="" placeholder="email">
               <input type="password" name="credentials[password]" value="" placeholder="password">
