preserves working functionality

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
         <div class="winner">
           <h1 id="winnerPop" class="hidden"></h1>
         </div>
-
         <!---GameBoard -->
       </div>
       <div class="container">
@@ -76,10 +75,11 @@
             <td id='8'></td>
           </tr>
         </table>
+
       </div>
 
-      <form class="sign-form">
-        <input type="submit" id="getId" name="submit" value="Current Game">
+      <form id="getId" class="sign-form current-game">
+        <input type="submit"  name="submit" value="Current Game">
       </form>
 
 
